# algo-reco

./: Dockerfile  Makefile  README.md  main.py  main_test.py  pyproject.toml  requirements.txt
.astro/: config.yaml
algo_reco_dbt/: dbt_project.yml
astro_reco_dbt/: dbt_project.yml
dags/: features_dag.py  inference_dag.py  ingestion_dag.py  pipeline_inference_dag.py  processing_dag.py  training_dag.py
data/raw/produits/: raw_produits_produits.csv
mlartifacts/1/models/m-d41f4dcdfd8d44038408b2c7bcc5f921/artifacts/: MLmodel  conda.yaml  model.pkl
mlartifacts/2/models/m-03de0da7273947608bd2556b6992be09/artifacts/: MLmodel
mlartifacts/2/models/m-04121d4a3ad847e58ca74c30413db6eb/artifacts/: MLmodel  model.pkl
mlartifacts/2/models/m-0417122797ae45a7932602e40582ce1e/artifacts/: MLmodel  model.pkl
mlartifacts/2/models/m-04df39afe8354166a6c44635b85da269/artifacts/: MLmodel  model.pkl
mlartifacts/2/models/m-09a49e6bf7464225aa55fb28511d59d8/artifacts/: MLmodel
mlartifacts/2/models/m-0a4eb786d59b493a97b34f7b11791513/artifacts/: MLmodel
mlartifacts/2/models/m-0b7d2bf76c104afbb9092bda6ac7ca7e/artifacts/: MLmodel
notebook/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  04_test.ipynb  05_explication_window.ipynb  mlflow.db
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
scripts/: bootstrap.py  features.py  inference.py  ingestion.py  mlflow.db  processing.py  train_model.py  utils.py
streamlit/: Dockerfile  app.py  requirements.txt
(+653 files in other folders)
