[project]
name = "algo-reco"
version = "0.1.0"
description = "Algo de reco produit"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage (>=3.7.0,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "gcsfs (>=2025.12.0,<2026.0.0)",
    "google-cloud-bigquery (>=3.39.0,<4.0.0)",
    "db-dtypes (>=1.5.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "bandit (>=1.9.2,<2.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
